--- a/01_model_and_instance_based_learning/model.ipynb
+++ b/01_model_and_instance_based_learning/model.ipynb
@@ -4,17 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple regression"
+    "# Model and instance based learning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One way to categorize ML systems is by how they **generalize**. There are two main approaches to generalization: instance-based learning and\n",
-    "model-based learning.\n",
+    "One way to categorize ML systems is by how they **generalize**. There are two main approaches to generalization: instance-based learning and model-based learning.\n",
     "The most trivial form of learning is simply to learn by heart, then generalizes to new cases using a similarity measure. This is called **instance-based learning**.\n",
-    "Another way to generalize from a set of examples is to build a model of these examples, then use that model to make predictions. This is called **model-based learning**."
+    "Another way to generalize from a set of examples is to build a model of these examples, then use that model to make predictions. This is called **model-based learning**.\n",
+    "\n",
+    "1. [Model based](#Model-based)\n",
+    "2. [Instance based](#Instance-based) "
    ]
   },
   {
@@ -85,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model based (linear regression)\n",
+    "## Model based\n",
     "\n",
     "There does seem to be a trend here! Although the data is noisy (i.e., partly random), it looks like life satisfaction goes up more or less linearly as the country’s GDP per capita increases. So you decide to model life satisfaction as a linear function of GDP per capita. This step is called **model selection**: you selected a linear model of life satisfaction with just one attribute, GDP per capita.\n",
     "Before you can use your model, you need to define the parameter of the line. How can you know which values will make your model perform best? To answer this question, you need to specify a **performance measure**. You can either define a utility function (or fitness function) that measures how good your model is, or you can define a cost function that measures how bad it is. For linear regression problems, people typically use a cost function that measures the distance between the linear model’s predictions and the training examples; the objective is to minimize this distance.\n",
@@ -155,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instance based (knn)\n",
+    "## Instance based\n",
     "\n",
     "If you had used an instance-based learning algorithm instead, you can search out a bit arounf Cyprus GDP and look at the closest countries (you will find Slovenia, Portugal and Spain). Averaging these three values, you get 5.77, which is pretty close to the model-based prediction.\n",
     "This simple algorithm is called **k-Nearest Neighbors (KNN)** regression (in this example, k = 3)."
@@ -204,13 +206,6 @@
     "X_new = [[22587]]  # Cyprus' GDP per capita\n",
     "print(model.predict(X_new)) # outputs [[ 5.96242338]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -229,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   },
   "nav_menu": {},
   "toc": {
