--- a/00_numpy_pandas_matplotlib/numpy.ipynb
+++ b/00_numpy_pandas_matplotlib/numpy.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# NumPy\n",
     "\n",
-    "NumPy is the fundamental library for scientific computing with Python. NumPy is centered around a powerful N-dimensional array object, and it also contains useful linear algebra, Fourier transform, and random number functions.\n",
+    "NumPy is the fundamental library for scientific computing with Python. NumPy is centered around a powerful N-dimensional array object, and it also contains useful linear algebra, Fourier transform, and random number functions. An interesting scientific paper on the importance of NumPy can be found [here](https://www.nature.com/articles/s41586-020-2649-2)\n",
     "\n",
     "Some vocabulary:\n",
     "- each dimension is called an **axis**\n",
