--- a/00_linear_algebra_calculus/calculus.ipynb
+++ b/00_linear_algebra_calculus/calculus.ipynb
@@ -4,45 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Math - Differential Calculus**\n",
-    "\n",
-    "Calculus is the study of continuous change. It has two major subfields: *differential calculus*, which studies the rate of change of functions, and *integral calculus*, which studies the area under the curve. In this notebook, we will discuss the former.\n",
-    "\n",
-    "*Differential calculus is at the core of Deep Learning, so it is important to understand what derivatives and gradients are, how they are used in Deep Learning, and understand what their limitations are.*\n",
-    "\n",
-    "**Note:** the code in this notebook is only used to create figures and animations. You do not need to understand how it works (although I did my best to make it clear, in case you are interested)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table align=\"left\">\n",
-    "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/ageron/handson-ml2/blob/master/math_differential_calculus.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-    "  </td>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "ChS5BE53XXYr"
-   },
-   "source": [
-    "# Slope of a straight line"
+    "# Differential Calculus\n",
+    "Calculus is the study of continuous change. It has two major subfields: **differential calculus**, which studies the rate of change of functions, and **integral calculus**, which studies the area under the curve. Differential calculus is at the core of **Deep Learning**, so it is important to understand what derivatives and gradients are, how they are used, and understand what their limitations are."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "cellView": "form",
-    "colab": {},
-    "colab_type": "code",
-    "id": "QXiG4ZiHvf_5"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#@title\n",
@@ -54,6 +23,16 @@
     "# To get smooth animations\n",
     "import matplotlib.animation as animation\n",
     "mpl.rc('animation', html='jshtml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "ChS5BE53XXYr"
+   },
+   "source": [
+    "## Slope of a straight line"
    ]
   },
   {
