deep neural nets

--- a/04_linear_models/linear_models.ipynb
+++ b/04_linear_models/linear_models.ipynb
@@ -1143,7 +1143,7 @@
     "### Lasso Regularization\n",
     "**Least Absolute Shrinkage and Selection Operator Regularization** (usually simply\n",
     "called **Lasso Regularization**) adds a regularization term to the cost function\n",
-    "using the $_ell$ norm of the weight vector.\n",
+    "using the $\\ell$ norm of the weight vector.\n",
     "\n",
     "$\\begin{align}\n",
     "J(\\theta) = MSE(\\theta) + \\alpha \\frac{1}{2} \\Sigma_{i=1}^{n}\\left|\\theta_i\\right| \n",
