--- a/00_math_prerequisites/linear_algebra.ipynb
+++ b/00_math_prerequisites/linear_algebra.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Linear Algebra\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/riccardoberta/machine-learning/blob/master/00_math_prerequisites/linear_algebra.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Google Colab\"/></a>\n",
+    "\n",
     "Linear algebra is the branch of mathematics that studies **vector spaces** and **linear transformations** between vector spaces, such as rotating a shape, scaling it up or down, translating it (ie. moving it), etc.\n",
     "\n",
     "1. [Vectors](#Vectors)\n",
