--- a/00_tools_prerequisites/matplotlib.ipynb
+++ b/00_tools_prerequisites/matplotlib.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# MatPlotLib\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/riccardoberta/machine-learning/blob/master/00_tools_prerequisites/matplotlib.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Google Colab\"/></a>\n",
+    "\n",
     "Matplotlib is a comprehensive library for creating static, animated, and interactive visualizations in Python.\n",
     "\n",
     "1. [First graph](#First-graph)\n",
