--- a/00_tools_prerequisites/python.ipynb
+++ b/00_tools_prerequisites/python.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Python\n",
     "\n",
+    "<a href=\"https://colab.research.google.com/github/riccardoberta/machine-learning/blob/master/00_tools_prerequisites/python.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Google Colab\"/></a>\n",
+    "\n",
     "[Python](https://www.python.org/) is an interpreted, high-level and general-purpose programming language, that supports multiple programming paradigms, including structured (particularly, procedural), object-oriented and functional programming. Python has a somewhat Zen description of its design principles, which you can find inside the Python interpreter itself by typing **import this**"
    ]
   },
