--- a/03_classification/classification.ipynb
+++ b/03_classification/classification.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Classification\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/riccardoberta/machine-learning/blob/master/03_classification/classification.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Google Colab\"/></a>\n",
+    "\n",
     "The classification modeling is the task of approximating the mapping function from input variables to discrete output variables and the main goal is to identify which class/category the new data will fall into.\n",
     "\n",
     "1. [MNIST datase](#MNIST-dataset)\n",
