--- a/05_linear_models/linear_models.ipynb
+++ b/05_linear_models/linear_models.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Linear Models\n",
     "\n",
+    "<a href=\"https://colab.research.google.com/github/riccardoberta/machine-learning/blob/master/04_linear_models/linear_models.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Google Colab\"/></a>\n",
+    "\n",
     "1. [Linear Regression](#Linear-regression)\n",
     "    - [Cost function](#Cost-function)\n",
     "    - [The Normal Equation](#The-Normal-Equation)\n",
