--- a/10_artificial_neural_networks/artificial_neural_networks.ipynb
+++ b/10_artificial_neural_networks/artificial_neural_networks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Artificial Neural Networks\n",
+    "# Tensro\n",
     "\n",
     "<a href=\"https://colab.research.google.com/github/riccardoberta/machine-learning/blob/master/11_artificial_neural_networks/artificial_neural_networks.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Google Colab\"/></a>\n",
     "\n",
